# ceph-global-cache-adaptor

./: CMakeLists.txt  NOTICE.txt  build.sh  diff_dep.sh
package/: globalcache-adaptorlib_pack.sh
patch/: ceph-global-cache-tls.patch  ceph-global-cache.patch  globalcache-ceph-adaptor-spec.patch
src/: CMakeLists.txt
src/ceph_proxy/: CMakeLists.txt  CcmAdaptor.cc  CcmAdaptor.h  CephExport.h  CephProxy.cc  CephProxy.h  CephProxyFtds.cc  CephProxyFtds.h  CephProxyInterface.cc  CephProxyInterface.h  CephProxyLog.h  CephProxyOp.cc  CephProxyOp.h  ConfigRead.cc  ConfigRead.h  PoolContext.h  RadosMonitor.cc  RadosMonitor.h  RadosWorker.cc  RadosWorker.h  RadosWrapper.cc  RadosWrapper.h  RbdWrapper.cc  sgl.h
src/dependency/include/: sa_def.h  sa_export.h
src/server_adaptor/: CMakeLists.txt  ClassHandler.cc  ClassHandler.h  class_api.cc  client_op_queue.h  config_read.cpp  config_read.h  msg_module.cpp  msg_module.h  msg_perf_record.cc  msg_perf_record.h  network_module.cpp  network_module.h  objclass.h  osa.cpp  osa.h  sa_client_dispatcher.cpp  sa_client_dispatcher.h  sa_ftds_osa.h  sa_server_dispatcher.cpp  sa_server_dispatcher.h  salog.cpp  salog.h
systemd/: gcache-radosgw.target  gcache-radosgw@.service
